# mipsy-macro

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: test.S  test.preprocessed.S  test_invalid.S  test_simple.S  test_simple.preprocessed.S
misc/: get_reserved_words.py
src/mipsy_macro/: __init__.py  cli.py  macro.py
src/mipsy_macro/resources/: reserved_words.json
