[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "mipsy_macro"
version = "0.1.1"
description = "A MIPS assembly macro preprocessor made for the mipsy emulator"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.scripts]
mipsy-macro = "mipsy_macro.cli:cli"

[project.urls]
Homepage = "https://github.com/mcdcam/mipsy-macro"